# AbbTraineeProgram

EX02/app/: main.cpp
EX02/core/: maths.cpp  maths.h
PR02/app/: main.cpp
PR02/cmake/: FindGMock.cmake
PR02/core/: maths.cpp  maths.h
PR02/test/: my_library_test.cpp
charTester/: CMakeLists.txt.user.f1c0d66
charTester/app/: main.cpp
task01/: CMakeLists.txt.user.f1c0d66  README.md
task01/app/: main.cpp
task01/core/: maths.cpp  maths.h
task01/test/: my_library_test.cpp
task02/: CMakeLists.txt.user.f1c0d66  README.md
task02/app/: main.cpp
task02/core/: my_library.cpp  my_library.h
task02/test/: my_library_test.cpp
task03/: README.md
task03/app/: CMakeLists.txt  main.cpp
task03/core/: my_library.cpp  my_library.h
task03/test/: my_library_test.cpp
task04/: README.md
task04/app/: main.cpp
task04/core/: space_add.cpp  space_add.h
task04/test/: my_library_test.cpp
task05/: README.md
task05/app/: main.cpp
task05/core/: conversions.cpp  (+3 more)
task05/test/: CMakeLists.txt  my_library_test.cpp
task06/: README.md
task07/: README.md
task08/: CMakeLists.txt  README.md
task08/app/: main.cpp
task08/core/: my_library.cpp  my_library.h
task08/test/: my_library_test.cpp
task09/: README.md
task09_withAlpha/: CMakeLists.txt.user.f1c0d66
task10/: README.md
task11/: CMakeLists.txt.user.f1c0d66  README.md
task11/core/: CMakeLists.txt  back_end.cpp  back_end.h  front_end.cpp  front_end.h  game_loop.cpp  game_loop.h  movement.cpp  movement.h
task12/: CMakeLists.txt.user.f1c0d66  README.md
task12_basicXO/: CMakeLists.txt
task13/: CMakeLists.txt.user.f1c0d66  README.md
task14/: CMakeLists.txt.user.f1c0d66  README.md
task15/: CMakeLists.txt.user.f1c0d66  README.md
task16/: README.md
task17/: README.md  text.txt
task18/: CMakeLists.txt.user.f1c0d66  README.md
task19/: README.md  random.csv
task20/: README.md  file.csv
task21/: CMakeLists.txt.user.f1c0d66  README.md  database.csv
(+97 files in other folders)
